
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct attrlist {int volattr; int commonattr; int bitmapcount; int member_0; } ;


 int ATTR_BIT_MAP_COUNT ;
 int ATTR_CMN_RETURNED_ATTRS ;
 int O_RDONLY ;
 int fgetattrlist (int,struct attrlist*,void*,size_t,int) ;
 void* malloc (size_t) ;
 int open (char*,int ) ;
 int perror (char*) ;
 int printf (char*,int) ;

int main() {
  int fd = open("/", O_RDONLY);
  if (fd == -1) {
    perror("unable to open fs root\n");
    return 0;
  }

  struct attrlist al = {0};

  al.bitmapcount = ATTR_BIT_MAP_COUNT;
  al.volattr = 0xfff;
  al.commonattr = ATTR_CMN_RETURNED_ATTRS;

  size_t attrBufSize = 16;
  void* attrBuf = malloc(attrBufSize);
  int options = 0;

  int err = fgetattrlist(fd, &al, attrBuf, attrBufSize, options);
  printf("err: %d\n", err);
  return 0;
}
